--- a/src/style/Filter.css
+++ b/src/style/Filter.css
@@ -19,6 +19,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -37,6 +38,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -55,6 +57,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -73,6 +76,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -91,6 +95,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -109,6 +114,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
@@ -127,6 +133,7 @@
     border-style:double;
     border-radius:5px;
     border-color: black;
+    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
