--- a/src/style/Filter.css
+++ b/src/style/Filter.css
@@ -1,3 +1,4 @@
+
 .main-container{
     display: flex;
     flex-direction: column;
@@ -14,136 +15,148 @@
 }
 .country-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
-    width: 28vw;
+    min-width: 28vw;
     flex-direction: row;
 }
-.country-dropdown .country-dropdown-container{
+.country-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.country-dropdown-container option{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
 }
 .vehicleType-dropdown{
     display: flex;
-    border:1px;
-    margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
-    width: 28vw;
+    min-width: 28vw;
     flex-direction: row;
 }
-.vehicleType-dropdown .vehicleType-dropdown-container{
+.vehicleType-dropdown-container{
     display: flex;
-    width: 25vw;
+    margin-left: 10px;
+    min-width: 28vw;
     flex-direction: row;
+    background-color: #D9D9D9;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    border-radius: 5px;
+    border-color: black;
 }
 .manufacture-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
 }
-.manufacture-dropdown .manufacture-dropdown-container{
+.manufacture-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.manufacture-dropdown-container option{
+    text-align: center;
+    display: flex;
 }
 .model-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
 }
-.model-dropdown .model-dropdown-container{
+.model-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.model-dropdown-container option{
+    display: flex;
+    text-align: center;
 }
 .engineSize-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
 }
-.engineSize-dropdown .engineSize-dropdown-container{
+.engineSize-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.engineSize-dropdown-container option{
+    display: flex;
+    text-align: center;
 }
 .year-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
 }
-.year-dropdown .year-dropdown-container{
+.year-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.year-dropdown-container option{
+    display: flex;
+    text-align: center;
 }
 .fuelType-dropdown{
     display: flex;
-    border:1px;
     margin-left: 10px;
-    border-style:double;
-    border-radius:5px;
-    border-color: black;
-    background-color: #D9D9D9;
     height: 3rem;
     width: 28vw;
     flex-direction: row;
 }
-.fuelType-dropdown .fuelType-dropdown-container{
+.fuelType-dropdown-container{
     display: flex;
-    width: 25vw;
+    min-width: 28vw;
+    border-radius: 5px;
+    border-color: black;
+    background-color: #D9D9D9;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.fuelType-dropdown-container option{
+    display: flex;
+    text-align: center;
 }
 .main-container img{
     width: 30px;
