--- a/src/style/Filter.css
+++ b/src/style/Filter.css
@@ -1,164 +1,191 @@
+select {
+    /* padding: 2rem; */
+}
 
-.main-container{
+.filter-main-container {
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    gap:1rem;
+    gap: 1rem;
 }
-.header{
+
+.header {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    column-gap: 2rem;
+    column-gap: 1rem;
     align-items: center;
-    width: 30vw;
+    margin-top: 2rem;
+    margin-left: 2rem;
 }
-.country-dropdown{
+
+.country-dropdown {
     display: flex;
-    margin-left: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
     height: 3rem;
-    min-width: 28vw;
     flex-direction: row;
 }
-.country-dropdown-container{
+
+.country-dropdown-container {
     display: flex;
-    min-width: 28vw;
+    min-width: 100%;
     border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
+    border: 0;
+    background-color: #e7e7e7;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.country-dropdown-container option{
-    display: flex;
-    text-align: center;
-    font-size: 30px;
-}
-.vehicleType-dropdown{
-    display: flex;
-    height: 3rem;
-    min-width: 28vw;
-    flex-direction: row;
-}
-.vehicleType-dropdown-container{
-    display: flex;
-    margin-left: 10px;
-    min-width: 28vw;
-    flex-direction: row;
-    background-color: #D9D9D9;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 5px;
-    border-color: black;
-}
-.manufacture-dropdown{
-    display: flex;
-    margin-left: 10px;
-    height: 3rem;
-    width: 28vw;
-    flex-direction: row;
-}
-.manufacture-dropdown-container{
-    display: flex;
-    min-width: 28vw;
-    border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.manufacture-dropdown-container option{
-    text-align: center;
-    display: flex;
-}
-.model-dropdown{
-    display: flex;
-    margin-left: 10px;
-    height: 3rem;
-    width: 28vw;
-    flex-direction: row;
-}
-.model-dropdown-container{
-    display: flex;
-    min-width: 28vw;
-    border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.model-dropdown-container option{
+
+.country-dropdown-container option {
     display: flex;
     text-align: center;
 }
-.engineSize-dropdown{
+
+.vehicleType-dropdown {
     display: flex;
-    margin-left: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
     height: 3rem;
-    width: 28vw;
     flex-direction: row;
 }
-.engineSize-dropdown-container{
+
+.vehicleType-dropdown-container {
     display: flex;
-    min-width: 28vw;
+    min-width: 100%;
     border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
+    border: 0;
+    background-color: #e7e7e7;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.engineSize-dropdown-container option{
+
+.vehicleType-dropdown-container option {
     display: flex;
     text-align: center;
 }
-.year-dropdown{
+
+.manufacture-dropdown {
     display: flex;
-    margin-left: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
     height: 3rem;
-    width: 28vw;
     flex-direction: row;
 }
-.year-dropdown-container{
+
+.manufacture-dropdown-container {
     display: flex;
-    min-width: 28vw;
+    min-width: 100%;
     border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
+    border: 0;
+    background-color: #e7e7e7;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.year-dropdown-container option{
-    display: flex;
+
+.manufacture-dropdown-container option {
     text-align: center;
-}
-.fuelType-dropdown{
     display: flex;
-    margin-left: 10px;
+}
+
+.model-dropdown {
+    display: flex;
+    margin-left: 2rem;
+    margin-right: 2rem;
     height: 3rem;
-    width: 28vw;
     flex-direction: row;
 }
-.fuelType-dropdown-container{
+
+.model-dropdown-container {
     display: flex;
-    min-width: 28vw;
+    min-width: 100%;
     border-radius: 5px;
-    border-color: black;
-    background-color: #D9D9D9;
+    border: 0;
+    background-color: #e7e7e7;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.fuelType-dropdown-container option{
+
+.model-dropdown-container option {
     display: flex;
     text-align: center;
 }
-.main-container img{
+
+.engineSize-dropdown {
+    display: flex;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    height: 3rem;
+    flex-direction: row;
+}
+
+.engineSize-dropdown-container {
+    display: flex;
+    min-width: 100%;
+    border-radius: 5px;
+    border: 0;
+    background-color: #e7e7e7;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.engineSize-dropdown-container option {
+    display: flex;
+    text-align: center;
+}
+
+.year-dropdown {
+    display: flex;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    height: 3rem;
+    flex-direction: row;
+}
+
+.year-dropdown-container {
+    display: flex;
+    min-width: 100%;
+    border-radius: 5px;
+    border: 0;
+    background-color: #e7e7e7;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.year-dropdown-container option {
+    display: flex;
+    text-align: center;
+}
+
+.fuelType-dropdown {
+    display: flex;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    height: 3rem;
+    flex-direction: row;
+}
+
+.fuelType-dropdown-container {
+    display: flex;
+    min-width: 100%;
+    border-radius: 5px;
+    border: 0;
+    background-color: #e7e7e7;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.fuelType-dropdown-container option {
+    display: flex;
+    text-align: center;
+}
+
+.filter-main-container img {
     width: 30px;
     height: 30px;
 }
