--- a/src/style/Result.css
+++ b/src/style/Result.css
@@ -1,3 +1,28 @@
-.result-main-container {
-    /* width: 100vw;ss */
+.result-table-container {
+    padding: 5%;
+}
+
+.result-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table-header {
+    background-color: #f4f4f4;
+    text-align: left;
+    padding: 12px;
+    border-right: 1px solid #ccc;
+}
+
+.table-cell {
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
+.table-row:hover {
+    background-color: #f9f9f9; 
+}
+
+th:last-child {
+    border-right: none;
 }
