update dynamic-filtering + dynamic-result implemented

--- a/src/style/Filter.css
+++ b/src/style/Filter.css
@@ -39,6 +39,7 @@ select {
 .country-dropdown-container option {
     display: flex;
     text-align: center;
+    padding-right: 2%;
 }
 
 .vehicleType-dropdown {
