--- a/src/style/Filter.css
+++ b/src/style/Filter.css
@@ -86,5 +86,30 @@
     font-size: large;
 }
 
+/* Container div */
+.clear-button-container {
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+    align-items: center;
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
+
+.clear-button {
+    padding: 0.5rem 1.5rem;       
+    font-weight: bold;
+    border: solid;                 
+    border-radius: 20px;          
+    border-width: 1px;
+    background-color: #e7e7e7;   
+    border-color: rgb(192, 190, 190);
+    cursor: pointer;              
+}
+
+/* Hover effect for the button */
+.clear-button:hover {
+    background-color: rgb(192, 190, 190);
+}
 
 
